# ChaosBench-Logic

./: .env.example  .gitignore  API_SETUP.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATASET_CARD.md  DEPLOYMENT_SUMMARY.md  FINAL_PUBLISHED_RESULTS_MIGRATION_REPORT.md  GITHUB_SETUP.md  HF_RELEASE_REPORT.md  LICENSE_DATA  README.md  RELEASE_CHECKLIST.md  RESULTS.md  V2_COMPLETION_SUMMARY.md  clients.py  eval_chaosbench.py  pyproject.toml  requirements.txt  run_benchmark.py
chaosbench/: __init__.py  cli.py
data/: batch11_consistency_paraphrase.jsonl  batch1_atomic_implication.jsonl  batch2_multiHop_crossSystem.jsonl  batch3_pde_chem_bio.jsonl  batch4_maps_advanced.jsonl  batch5_counterfactual_high_difficulty.jsonl  batch6_deep_bias_probes.jsonl  batch7_multiturn_advanced.jsonl  canonical_v2_files.json  v22_adversarial.jsonl  v22_consistency_paraphrase.jsonl  v22_cross_indicator.jsonl  v22_extended_systems.jsonl  v22_fol_inference.jsonl  v22_indicator_diagnostics.jsonl  v22_multi_hop.jsonl  v22_perturbation_robustness.jsonl  v2_manifest.json
docs/: API_SETUP.md  CACHE_USAGE.md  DATASET.md  EVAL_PROTOCOL.md  FREEZE_PLAN.md  FUTURE_WORK.md  INDICATOR_COMPUTATION.md  INDICATOR_THRESHOLDS.md  ONTOLOGY.md  PROPRIETARY_EXECUTION_PLAN.md  PROPRIETARY_QUICKSTART.md  PROPRIETARY_RUN_PLAN.md  QUALITY_STANDARD.md  README.md  RELEASE_NOTES_V2.md  REPO_POLICY.md  RESULTS.md  RUNS_POLICY.md  RUN_PLAN.md  RUN_PROTOCOL.md  SCALING_ROADMAP.md  V2_SPEC.md
infra/: README.md
published_results/: README.md
runs/: manifest_20260217T093147Z_dummy_zeroshot.json
systems/: henon.json  (+29 more)
(+624 files in other folders)
